<resources>
    <string name="app_name">TGP</string>

    <string name="app_name_full">The Good Parts</string>
    <string name="tag_line">One stop solution for your learning without any distractions.</string>

    <!--BottomAppBar-->
    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Main logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_compose_email_content_description">Compose new email</string>
    <string name="fab_color_email_content_description">Main to email</string>

    <!--BottomSheet menus-->
    <string name="menu_item_forward">Forward</string>
    <string name="menu_item_reply">Reply</string>
    <string name="menu_item_color_all">Main all</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_star">Star</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_settings">Settings</string>

    <string name="menu_dark_theme_light">Light</string>
    <string name="menu_dark_theme_dark">Dark</string>
    <string name="menu_dark_theme_battery_saver">Set by Battery Saver</string>
    <string name="menu_dark_theme_system_default">System default</string>

    <!--BottomNavigationDrawer-->
    <string name="navigation_inbox">Inbox</string>
    <string name="navigation_starred">Starred</string>
    <string name="navigation_sent">Send</string>
    <string name="navigation_trash">Trash</string>
    <string name="navigation_spam">Spam</string>
    <string name="navigation_drafts">Drafts</string>

    <!--MainFragment-->
    <string name="email_sender_profile_content_desc">Profile image of sender</string>
    <string name="navigate_back_icon_content_desc">Navigate back</string>

    <!--EmailFragment-->
    <string name="email_recipient_to">To %1$s</string>
    <string name="email_card_transition_name">email_card_%1$s</string>

    <!--ComposeFragment-->
    <string name="compose_close_content_desc">Close editing email</string>
    <string name="compose_send_content_desc">Send email</string>
    <string name="compose_add_recipient_icon_content_desc">Add recipient</string>
    <string name="compose_subject_hint">Subject</string>
    <string name="compose_body_hint">New message…</string>
    <string name="compose_recipient_group_content_desc">Recipients</string>

    <!--MainActivity-->
    <string name="news">News</string>
    <string name="club">Club</string>
    <string name="home">Home</string>
    <string name="read">Read</string>
    <string name="watch">Watch</string>
    <string name="listen">Listen</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="share">Share</string>

    <!--More Fragment-->
    <string name="bookmark">Bookmark</string>
    <string name="filter_content">Filter Content</string>
    <string name="whats_new_in_app">What\'s new in App</string>
    <string name="whats_upcoming_in_app">What\'s upcoming in App</string>
    <string name="donation">Donation</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="help_amp_support">Help &amp; Support</string>

    <string name="default_notification_channel_id">Default</string>

    <!--AlertDialogUtility-->
    <string name="work_in_progress">Work-in-progress</string>
    <string name="feature_available_soon_thanks_for_showing_interest">This feature will be available soon. Thank you for showing interest.</string>

    <string name="something_went_wrong">Something went wrong !</string>
    <string name="please_stay_calm_our_team_is_working_on_it">Please stay calm. Our team is working on it.</string>

    <string name="internet_unavailable">Internet unavailable !</string>
    <string name="please_check_your_internet_connection_and_retry">Please check your internet connection and retry.</string>

    <!--view_progress_dialog-->
    <string name="loading">loading</string>

    <!--CompanyListFragment & CompanyDetailFragment-->
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="website_s">Website: %s</string>
    <string name="name_a_to_z">Name - A to Z</string>
    <string name="name_z_to_a">Name - Z to A</string>
    <string name="age_experienced_to_young">Age - Experienced to Young</string>
    <string name="age_young_to_experienced">Age - Young to Experienced</string>
    <plurals name="s_year">
        <item quantity="one">%d Year</item>
        <item quantity="other">%d Years</item>
    </plurals>
    <plurals name="members_s">
        <item quantity="one">Member (%d)</item>
        <item quantity="other">Members (%d)</item>
    </plurals>
    <plurals name="s_member">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
</resources>
